// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calcHS6 — snapshots (SPEC §5) > Zona I con UNA sola medida válida (barrera lámina-tipo) → CUMPLE 1`] = `
{
  "aplica": true,
  "barreraObligatoria": false,
  "combinacionSuficiente": true,
  "elementoCritico": null,
  "elementoCriticoId": null,
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": null,
  "municipio": "Municipio Zona I",
  "nMedidasMin": 1,
  "nMedidasValidas": 1,
  "nivelProteccion": "Zona I: barrera de protección (ap. 3.1) o, alternativamente, cámara de aire ventilada según el ap. 3.2 y separada de los locales habitables por un cerramiento sin grietas, fisuras ni discontinuidades (ap. 3 pto 1 a).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [
    {
      "cuenta": true,
      "estado": "ok",
      "id": "barrera-zona-i",
      "motivo": "Barrera de protección (ap. 3.1), vía lámina tipo: VÁLIDA (cuenta como medida). Continuidad OK, encuentros OK, puertas OK.",
      "nombre": "Barrera de protección",
      "requisitos": [
        {
          "clave": "coef-difusion",
          "detalle": "5e-12 m²/s < 1e-11 m²/s (ap. 3.1.1) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Coeficiente de difusión del radón de la lámina",
        },
        {
          "clave": "espesor-lamina",
          "detalle": "2.5 mm ≥ 2 mm (ap. 3.1.1) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Espesor de la lámina",
        },
        {
          "clave": "continuidad-sellada",
          "detalle": "La barrera es continua, con juntas y encuentros sellados y sin fisuras (ap. 3.1.1 pto 3 a, b y d).",
          "estado": "ok",
          "etiqueta": "Continuidad sellada de la barrera",
        },
        {
          "clave": "penetraciones-selladas",
          "detalle": "Los encuentros con los elementos que la atraviesan (tuberías, arquetas, juntas) están sellados (ap. 3.1.1 pto 3 b).",
          "estado": "ok",
          "etiqueta": "Penetraciones selladas",
        },
        {
          "clave": "puertas-estancas",
          "detalle": "Las puertas que interrumpen la barrera son estancas y con cierre automático (ap. 3.1.1 pto 3 c).",
          "estado": "ok",
          "etiqueta": "Puertas estancas y con cierre automático",
        },
      ],
      "tipo": "barrera",
    },
  ],
  "veredictoGlobal": "ok",
  "warnings": [],
  "zona": "I",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > Zona I: espacio de contención NATURAL infra-dimensionado (área < 10·perímetro) → falla el requisito 1`] = `
{
  "aplica": true,
  "barreraObligatoria": false,
  "combinacionSuficiente": false,
  "elementoCritico": "Medida propuesta NO válida: "camara-infra" (Espacio de contención ventilado (ap. 3.2), cámara con ventilación natural: NO válido (no cuenta como medida). Aberturas de 10 cm² por metro de perímetro.).",
  "elementoCriticoId": "camara-infra",
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": null,
  "municipio": null,
  "nMedidasMin": 1,
  "nMedidasValidas": 0,
  "nivelProteccion": "Zona I: barrera de protección (ap. 3.1) o, alternativamente, cámara de aire ventilada según el ap. 3.2 y separada de los locales habitables por un cerramiento sin grietas, fisuras ni discontinuidades (ap. 3 pto 1 a).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [
    {
      "cuenta": false,
      "estado": "fail",
      "id": "camara-infra",
      "motivo": "Espacio de contención ventilado (ap. 3.2), cámara con ventilación natural: NO válido (no cuenta como medida). Aberturas de 10 cm² por metro de perímetro.",
      "nombre": "Espacio de contención ventilado",
      "requisitos": [
        {
          "clave": "ventilacion-natural",
          "detalle": "350 cm² < 400 cm² exigidos (10 cm²/m · 40 m, ap. 3.2) → NO CUMPLE.",
          "estado": "fail",
          "etiqueta": "Ventilación natural de la cámara (área de aberturas)",
        },
      ],
      "tipo": "espacio_contencion",
    },
  ],
  "veredictoGlobal": "fail",
  "warnings": [
    "Espacio de contención "camara-infra": ventilación natural INSUFICIENTE (aberturas < 10 cm² por metro de perímetro, ap. 3.2).",
    "Combinación INSUFICIENTE (ap. 3 pto 1): la zona I exige 1 medida(s); solo 0 válida(s).",
  ],
  "zona": "I",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > Zona II SIN barrera (solo espacio de contención) → NO CUMPLE (barrera obligatoria) 1`] = `
{
  "aplica": true,
  "barreraObligatoria": true,
  "combinacionSuficiente": false,
  "elementoCritico": "FALTA la barrera de protección OBLIGATORIA en Zona II (ap. 3 pto 1).",
  "elementoCriticoId": "__falta_medida__",
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": null,
  "municipio": null,
  "nMedidasMin": 2,
  "nMedidasValidas": 1,
  "nivelProteccion": "Zona II: barrera de protección (ap. 3.1) junto con un sistema adicional: espacio de contención ventilado (ap. 3.2) o despresurización del terreno (ap. 3.3) (ap. 3 pto 1 b).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [
    {
      "cuenta": true,
      "estado": "ok",
      "id": "solo-camara",
      "motivo": "Espacio de contención ventilado (ap. 3.2), cámara con ventilación natural: VÁLIDO (cuenta como medida). Aberturas de 10 cm² por metro de perímetro.",
      "nombre": "Espacio de contención ventilado",
      "requisitos": [
        {
          "clave": "ventilacion-natural",
          "detalle": "400 cm² ≥ 300 cm² exigidos (10 cm²/m · 30 m, ap. 3.2) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Ventilación natural de la cámara (área de aberturas)",
        },
      ],
      "tipo": "espacio_contencion",
    },
  ],
  "veredictoGlobal": "fail",
  "warnings": [
    "Zona II (ap. 3 pto 1): la barrera de protección es OBLIGATORIA y no hay ninguna barrera válida entre las soluciones propuestas.",
  ],
  "zona": "II",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > Zona II con barrera válida pero SIN medida adicional → NO CUMPLE (nº insuficiente) 1`] = `
{
  "aplica": true,
  "barreraObligatoria": true,
  "combinacionSuficiente": false,
  "elementoCritico": "Faltan medidas: la zona exige 2, válidas 1 (ap. 3 pto 1).",
  "elementoCriticoId": "__falta_medida__",
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": null,
  "municipio": null,
  "nMedidasMin": 2,
  "nMedidasValidas": 1,
  "nivelProteccion": "Zona II: barrera de protección (ap. 3.1) junto con un sistema adicional: espacio de contención ventilado (ap. 3.2) o despresurización del terreno (ap. 3.3) (ap. 3 pto 1 b).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [
    {
      "cuenta": true,
      "estado": "ok",
      "id": "barrera-sola",
      "motivo": "Barrera de protección (ap. 3.1), vía lámina tipo: VÁLIDA (cuenta como medida). Continuidad OK, encuentros OK, puertas OK.",
      "nombre": "Barrera de protección",
      "requisitos": [
        {
          "clave": "coef-difusion",
          "detalle": "5e-12 m²/s < 1e-11 m²/s (ap. 3.1.1) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Coeficiente de difusión del radón de la lámina",
        },
        {
          "clave": "espesor-lamina",
          "detalle": "2.5 mm ≥ 2 mm (ap. 3.1.1) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Espesor de la lámina",
        },
        {
          "clave": "continuidad-sellada",
          "detalle": "La barrera es continua, con juntas y encuentros sellados y sin fisuras (ap. 3.1.1 pto 3 a, b y d).",
          "estado": "ok",
          "etiqueta": "Continuidad sellada de la barrera",
        },
        {
          "clave": "penetraciones-selladas",
          "detalle": "Los encuentros con los elementos que la atraviesan (tuberías, arquetas, juntas) están sellados (ap. 3.1.1 pto 3 b).",
          "estado": "ok",
          "etiqueta": "Penetraciones selladas",
        },
        {
          "clave": "puertas-estancas",
          "detalle": "Las puertas que interrumpen la barrera son estancas y con cierre automático (ap. 3.1.1 pto 3 c).",
          "estado": "ok",
          "etiqueta": "Puertas estancas y con cierre automático",
        },
      ],
      "tipo": "barrera",
    },
  ],
  "veredictoGlobal": "fail",
  "warnings": [
    "Combinación INSUFICIENTE (ap. 3 pto 1): la zona II exige 2 medida(s); solo 1 válida(s).",
  ],
  "zona": "II",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > Zona II: barrera con LÁMINA FUERA DE UMBRAL (coef alto + espesor bajo) → barrera no cuenta 1`] = `
{
  "aplica": true,
  "barreraObligatoria": true,
  "combinacionSuficiente": false,
  "elementoCritico": "Barrera de protección OBLIGATORIA (Zona II) presente pero NO válida: "barrera-mala-lamina".",
  "elementoCriticoId": "barrera-mala-lamina",
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": null,
  "municipio": null,
  "nMedidasMin": 2,
  "nMedidasValidas": 1,
  "nivelProteccion": "Zona II: barrera de protección (ap. 3.1) junto con un sistema adicional: espacio de contención ventilado (ap. 3.2) o despresurización del terreno (ap. 3.3) (ap. 3 pto 1 b).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [
    {
      "cuenta": false,
      "estado": "fail",
      "id": "barrera-mala-lamina",
      "motivo": "Barrera de protección (ap. 3.1), vía lámina tipo: NO válida (no cuenta como medida). Continuidad OK, encuentros OK, puertas OK.",
      "nombre": "Barrera de protección",
      "requisitos": [
        {
          "clave": "coef-difusion",
          "detalle": "9.999999999999999e-11 m²/s ≥ 1e-11 m²/s (ap. 3.1.1) → NO CUMPLE.",
          "estado": "fail",
          "etiqueta": "Coeficiente de difusión del radón de la lámina",
        },
        {
          "clave": "espesor-lamina",
          "detalle": "1 mm < 2 mm (ap. 3.1.1) → NO CUMPLE.",
          "estado": "fail",
          "etiqueta": "Espesor de la lámina",
        },
        {
          "clave": "continuidad-sellada",
          "detalle": "La barrera es continua, con juntas y encuentros sellados y sin fisuras (ap. 3.1.1 pto 3 a, b y d).",
          "estado": "ok",
          "etiqueta": "Continuidad sellada de la barrera",
        },
        {
          "clave": "penetraciones-selladas",
          "detalle": "Los encuentros con los elementos que la atraviesan (tuberías, arquetas, juntas) están sellados (ap. 3.1.1 pto 3 b).",
          "estado": "ok",
          "etiqueta": "Penetraciones selladas",
        },
        {
          "clave": "puertas-estancas",
          "detalle": "Las puertas que interrumpen la barrera son estancas y con cierre automático (ap. 3.1.1 pto 3 c).",
          "estado": "ok",
          "etiqueta": "Puertas estancas y con cierre automático",
        },
      ],
      "tipo": "barrera",
    },
    {
      "cuenta": true,
      "estado": "ok",
      "id": "camara-adicional",
      "motivo": "Espacio de contención ventilado (ap. 3.2), cámara con ventilación natural: VÁLIDO (cuenta como medida). Aberturas de 10 cm² por metro de perímetro.",
      "nombre": "Espacio de contención ventilado",
      "requisitos": [
        {
          "clave": "ventilacion-natural",
          "detalle": "400 cm² ≥ 300 cm² exigidos (10 cm²/m · 30 m, ap. 3.2) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Ventilación natural de la cámara (área de aberturas)",
        },
      ],
      "tipo": "espacio_contencion",
    },
  ],
  "veredictoGlobal": "fail",
  "warnings": [
    "Barrera "barrera-mala-lamina": la lámina NO es lámina tipo (coeficiente de difusión < 1e-11 m²/s y espesor ≥ 2 mm, ap. 3.1.1).",
    "Zona II (ap. 3 pto 1): la barrera de protección es OBLIGATORIA y no hay ninguna barrera válida entre las soluciones propuestas.",
  ],
  "zona": "II",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > Zona II: barrera vía 'calculo' (Nivel B DIFERIDO) → no cuenta + warn de pendiente 1`] = `
{
  "aplica": true,
  "barreraObligatoria": true,
  "combinacionSuficiente": false,
  "elementoCritico": "Barrera de protección OBLIGATORIA (Zona II) presente pero NO válida: "barrera-calculo".",
  "elementoCriticoId": "barrera-calculo",
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": null,
  "municipio": null,
  "nMedidasMin": 2,
  "nMedidasValidas": 1,
  "nivelProteccion": "Zona II: barrera de protección (ap. 3.1) junto con un sistema adicional: espacio de contención ventilado (ap. 3.2) o despresurización del terreno (ap. 3.3) (ap. 3 pto 1 b).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [
    {
      "cuenta": false,
      "estado": "warn",
      "id": "barrera-calculo",
      "motivo": "Barrera de protección (ap. 3.1), vía cálculo (DIFERIDA): NO válida (no cuenta como medida). Continuidad OK, encuentros OK, puertas OK.",
      "nombre": "Barrera de protección",
      "requisitos": [
        {
          "clave": "via-calculo",
          "detalle": "Vía por cálculo (ap. 3.1.2) DIFERIDA: el motor no evalúa E < Elim hasta cotejar sus constantes con el PDF. Justifíquela aparte o use la lámina tipo.",
          "estado": "warn",
          "etiqueta": "Justificación de la barrera por cálculo de difusión (E < Elim)",
        },
        {
          "clave": "continuidad-sellada",
          "detalle": "La barrera es continua, con juntas y encuentros sellados y sin fisuras (ap. 3.1.1 pto 3 a, b y d).",
          "estado": "ok",
          "etiqueta": "Continuidad sellada de la barrera",
        },
        {
          "clave": "penetraciones-selladas",
          "detalle": "Los encuentros con los elementos que la atraviesan (tuberías, arquetas, juntas) están sellados (ap. 3.1.1 pto 3 b).",
          "estado": "ok",
          "etiqueta": "Penetraciones selladas",
        },
        {
          "clave": "puertas-estancas",
          "detalle": "Las puertas que interrumpen la barrera son estancas y con cierre automático (ap. 3.1.1 pto 3 c).",
          "estado": "ok",
          "etiqueta": "Puertas estancas y con cierre automático",
        },
      ],
      "tipo": "barrera",
    },
    {
      "cuenta": true,
      "estado": "ok",
      "id": "camara-adicional",
      "motivo": "Espacio de contención ventilado (ap. 3.2), cámara con ventilación natural: VÁLIDO (cuenta como medida). Aberturas de 10 cm² por metro de perímetro.",
      "nombre": "Espacio de contención ventilado",
      "requisitos": [
        {
          "clave": "ventilacion-natural",
          "detalle": "400 cm² ≥ 300 cm² exigidos (10 cm²/m · 30 m, ap. 3.2) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Ventilación natural de la cámara (área de aberturas)",
        },
      ],
      "tipo": "espacio_contencion",
    },
  ],
  "veredictoGlobal": "fail",
  "warnings": [
    "Barrera "barrera-calculo": justificación por cálculo (E < Elim, ap. 3.1.2) NO soportada en esta versión. Use la lámina tipo (espesor ≥ 2 mm y coeficiente de difusión < 1e-11 m²/s).",
    "Zona II (ap. 3 pto 1): la barrera de protección es OBLIGATORIA y no hay ninguna barrera válida entre las soluciones propuestas.",
  ],
  "zona": "II",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > defaults (Zona II, sótano habitable: barrera lámina-tipo + cámara natural → CUMPLE) 1`] = `
{
  "aplica": true,
  "barreraObligatoria": true,
  "combinacionSuficiente": true,
  "elementoCritico": null,
  "elementoCriticoId": null,
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": null,
  "municipio": "Cáceres",
  "nMedidasMin": 2,
  "nMedidasValidas": 2,
  "nivelProteccion": "Zona II: barrera de protección (ap. 3.1) junto con un sistema adicional: espacio de contención ventilado (ap. 3.2) o despresurización del terreno (ap. 3.3) (ap. 3 pto 1 b).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [
    {
      "cuenta": true,
      "estado": "ok",
      "id": "barrera-lamina",
      "motivo": "Barrera de protección (ap. 3.1), vía lámina tipo: VÁLIDA (cuenta como medida). Continuidad OK, encuentros OK, puertas OK.",
      "nombre": "Barrera de protección (lámina-tipo sellada)",
      "requisitos": [
        {
          "clave": "coef-difusion",
          "detalle": "8e-12 m²/s < 1e-11 m²/s (ap. 3.1.1) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Coeficiente de difusión del radón de la lámina",
        },
        {
          "clave": "espesor-lamina",
          "detalle": "2.5 mm ≥ 2 mm (ap. 3.1.1) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Espesor de la lámina",
        },
        {
          "clave": "continuidad-sellada",
          "detalle": "La barrera es continua, con juntas y encuentros sellados y sin fisuras (ap. 3.1.1 pto 3 a, b y d).",
          "estado": "ok",
          "etiqueta": "Continuidad sellada de la barrera",
        },
        {
          "clave": "penetraciones-selladas",
          "detalle": "Los encuentros con los elementos que la atraviesan (tuberías, arquetas, juntas) están sellados (ap. 3.1.1 pto 3 b).",
          "estado": "ok",
          "etiqueta": "Penetraciones selladas",
        },
        {
          "clave": "puertas-estancas",
          "detalle": "Las puertas que interrumpen la barrera son estancas y con cierre automático (ap. 3.1.1 pto 3 c).",
          "estado": "ok",
          "etiqueta": "Puertas estancas y con cierre automático",
        },
      ],
      "tipo": "barrera",
    },
    {
      "cuenta": true,
      "estado": "ok",
      "id": "camara-ventilada",
      "motivo": "Espacio de contención ventilado (ap. 3.2), cámara con ventilación natural: VÁLIDO (cuenta como medida). Aberturas de 10 cm² por metro de perímetro.",
      "nombre": "Espacio de contención ventilado (cámara, ventilación natural)",
      "requisitos": [
        {
          "clave": "ventilacion-natural",
          "detalle": "480 cm² ≥ 400 cm² exigidos (10 cm²/m · 40 m, ap. 3.2) → CUMPLE.",
          "estado": "ok",
          "etiqueta": "Ventilación natural de la cámara (área de aberturas)",
        },
      ],
      "tipo": "espacio_contencion",
    },
  ],
  "veredictoGlobal": "ok",
  "warnings": [],
  "zona": "II",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > local sin contacto con el terreno (localHabitable...=false) → aplica=false, veredicto OK 1`] = `
{
  "aplica": false,
  "barreraObligatoria": true,
  "combinacionSuficiente": true,
  "elementoCritico": null,
  "elementoCriticoId": null,
  "localHabitableEnContactoConTerreno": false,
  "motivoNoAplica": "El local no es habitable, o está separado del terreno por un espacio abierto ventilado (ap. 1 pto 2): la HS 6 no exige medidas.",
  "municipio": null,
  "nMedidasMin": 2,
  "nMedidasValidas": 0,
  "nivelProteccion": "Zona II: barrera de protección (ap. 3.1) junto con un sistema adicional: espacio de contención ventilado (ap. 3.2) o despresurización del terreno (ap. 3.3) (ap. 3 pto 1 b).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [],
  "veredictoGlobal": "ok",
  "warnings": [],
  "zona": "II",
}
`;

exports[`calcHS6 — snapshots (SPEC §5) > zona 'sin_exigencia' → aplica=false, veredicto OK 'sin exigencia', sin requerir soluciones 1`] = `
{
  "aplica": false,
  "barreraObligatoria": false,
  "combinacionSuficiente": true,
  "elementoCritico": null,
  "elementoCriticoId": null,
  "localHabitableEnContactoConTerreno": true,
  "motivoNoAplica": "Municipio no incluido en el Apéndice B: la Sección HS 6 no se aplica (ap. 1 pto 1).",
  "municipio": null,
  "nMedidasMin": 0,
  "nMedidasValidas": 0,
  "nivelProteccion": "Municipio no incluido en el Apéndice B: la Sección HS 6 no se aplica (ap. 1 pto 1).",
  "nivelReferencia_Bq_m3": 300,
  "porMedida": [],
  "veredictoGlobal": "ok",
  "warnings": [],
  "zona": "sin_exigencia",
}
`;
